# tIGArx

./: Improvements.md  README.md  environment.yml  numpy_perf_test.py  pyproject.toml  setup.py  singularity-recipe.def  tIGArx.yaml
demos/biharmonic/: biharmonic.py  biharmonic_local.py
demos/elasticity/: elasticity.py  elasticity_3d.py
demos/euler-bernoulli-beam/: modal-analysis.py  modal-analysis_local.py
demos/kl-shell-hyper/: kl-hyper.py  kl-hyper_local.py
demos/kl-shell-svk/: dynamic-tspline.py  dynamic-tspline_local.py  reef-knot.py
demos/poisson/: poisson-nonzero-bc.py  poisson-nurbs.py  poisson.py  poisson_local-nurbs.py  poisson_local.py  poisson_local_3d.py  poisson_local_nonlinear.py
docker/: Dockerfile
docs/: Makefile  conf.py  index.rst
ext_validation/: lagrange_extraction.m
tIGAr/: BSplines.py  NURBS.py  RhinoTSplines.py  __init__.py  calculusUtils.py  common.py  compatibleSplines.py  timeIntegration.py
tIGArx/: BSplines.py  CoordChartSpline.py  ExtractedSpline.py  ExtractionGenerator.py  LocalAssembly.py  LocalSpline.py  MultiFieldSplines.py  NURBS.py  RhinoTSplines.py  SplineInterface.py  __init__.py  calculusUtils.py  common.py  compatibleSplines.py  solvers.py  timeIntegration.py  timing_util.py  utils.py
tests/: biharmonic.py  bspline_dofs.py  elasticity.py  extraction.py  kl_hyper.py  local_spline.py  poisson.py  test_biharmonic.py  test_bspline_dofs.py  test_elasticity.py  test_extraction.py  test_kl_hyper.py  test_local_spline.py  test_modal_analysis.py  test_poisson.py
tigarx/: LocalAssembly.py  LocalSpline.py  Problems.py  SplineInterface.py  __init__.py  common.py  compatibleSplines.py  solvers.py
(+3 files in other folders)
